# mupl

./: Cargo.toml  LICENSE  README.md
src/: data.rs  load.rs  main.rs  playlist.rs  song.rs  terminal.rs  utils.rs
src/ui/: active_song_info.rs  confirmation.rs  debug.rs  fuzzy_finder.rs  mod.rs  modal.rs  playlist.rs  song.rs  terminal.rs  text_prompt.rs  utils.rs
