[package]
name = "vimp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.1"
clap = { version = "4.3.4", features = ["derive"] }
crossterm = "0.26.1"
tui = "0.19.0"
walkdir = "2.3.3"
serde_json = "1.0.99"
unicode-width = "0.1.10"
strsim = "0.10.0"
