[package]
name = "vimp"
version = "0.1.0"
edition = "2021"
authors = ["PraxTube"]
description = "vim based music player (vimp) in the terminal."
homepage = "https://github.com/PraxTube/vimp"
documentation = "https://github.com/PraxTube/vimp"
repository = "https://github.com/PraxTube/vimp"
readme = "README.md"

license = "MIT"

keywords = ["music", "music-player", "vi", "vim", "CLI"]
categories = ["command-line-interface", "gui", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
serde_json = "1.0.120"
unicode-width = "0.1.13"
strsim = "0.11.1"

crossterm = "0.27.0"
ratatui = "0.27.0"

clap = { version = "4.5.9", features = ["derive"] }
rodio = "0.19.0"
lofty = "0.20.1"
